# AI-PR-agency

./: .env.example  .gitignore  OPENCLAW-VPS-SETUP.md  README.md  pyproject.toml  requirements.txt  setup-openclaw-vps.sh
frontend/static/css/: styles.css
frontend/static/js/: app.js
frontend/templates/: base.html  dashboard.html  login.html  matches.html  register.html
src/: main.py
src/analytics/: __init__.py  router.py  schemas.py  service.py
src/auth/: router.py  schemas.py  service.py
src/companies/: models.py  router.py  schemas.py  service.py
src/core/: base_service.py  config.py  database.py  exceptions.py  security.py
src/embeddings/: generator.py  models.py  service.py
src/feedback/: __init__.py  models.py  router.py  schemas.py  service.py
src/frontend/: __init__.py  router.py
src/journalists/: models.py  router.py  schemas.py  service.py
src/llm/: __init__.py  deepseek.py  mock.py  provider.py  schemas.py  service.py
src/matching/: router.py  rules.py  schemas.py  service.py
src/topics/: models.py  router.py  schemas.py  service.py
src/users/: models.py  router.py  schemas.py  service.py
tests/: conftest.py  test_analytics.py  test_auth.py  test_companies.py  test_embeddings.py  test_feedback.py  test_journalists.py  test_llm.py  test_matching.py  test_topics.py  test_users.py
