[project]
name = "editorial-pr-matchmaking"
version = "0.1.0"
description = "Journalist-first PR matchmaking platform"
requires-python = ">=3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py311"
